--- a/pom.xml
+++ b/pom.xml
@@ -24,45 +24,45 @@
 
 
 
-         <!--https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl-->
-        <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>lwjgl</artifactId>
-            <version>2.9.3</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util -->
-        <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>lwjgl_util</artifactId>
-            <version>2.9.3</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl-platform -->
-        <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>lwjgl-platform</artifactId>
-            <version>2.9.3</version>
-            <type>pom</type>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util_applet -->
-        <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>lwjgl_util_applet</artifactId>
-            <version>2.9.3</version>
-        </dependency>
+         <!--&lt;!&ndash;https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.lwjgl.lwjgl</groupId>-->
+            <!--<artifactId>lwjgl</artifactId>-->
+            <!--<version>2.9.3</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.lwjgl.lwjgl</groupId>-->
+            <!--<artifactId>lwjgl_util</artifactId>-->
+            <!--<version>2.9.3</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl-platform &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.lwjgl.lwjgl</groupId>-->
+            <!--<artifactId>lwjgl-platform</artifactId>-->
+            <!--<version>2.9.3</version>-->
+            <!--<type>pom</type>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util_applet &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.lwjgl.lwjgl</groupId>-->
+            <!--<artifactId>lwjgl_util_applet</artifactId>-->
+            <!--<version>2.9.3</version>-->
+        <!--</dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/parent -->
-        <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>parent</artifactId>
-            <version>2.9.3</version>
-            <type>pom</type>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/slick-util/slick-util -->
-        <dependency>
-            <groupId>slick-util</groupId>
-            <artifactId>slick-util</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.lwjgl.lwjgl/parent &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.lwjgl.lwjgl</groupId>-->
+            <!--<artifactId>parent</artifactId>-->
+            <!--<version>2.9.3</version>-->
+            <!--<type>pom</type>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/slick-util/slick-util &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>slick-util</groupId>-->
+            <!--<artifactId>slick-util</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.github.java-graphics/glm &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>io.github.java-graphics</groupId>-->
